# usyav1

./: .gitignore  Cargo.toml  README.md  app.elf  build.rs  implementation_plan.md
app/src/: main.rs
boot/: Cargo.toml
boot/src/: main.rs
boot/src/arch/x86_64/: boot.asm
c_template/: Makefile  driver.c  driver.elf  libc.c  libc.h
drivers/gpu/: Cargo.toml
drivers/gpu/src/: compositor.rs  font.rs  lib.rs
drivers/input/: Cargo.toml
drivers/input/src/: keyboard.rs  lib.rs  mouse.rs
drivers/src/: lib.rs
drivers/storage/src/: lib.rs
hal/: Cargo.toml
hal/src/: gdt.rs  interrupts.rs  lib.rs  pci.rs  serial.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  memory.rs  task.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs  pmm.rs
posix/: Cargo.toml
posix/src/: lib.rs  process.rs  syscalls.rs
xtask/: Cargo.toml
xtask/src/: iso_test.rs  main.rs
