[workspace]
resolver = "2"
members = [
    "boot",
    "kernel",
    "hal",
    "drivers/storage",
    "drivers/usb",
    "drivers/network",
    "drivers/gpu",
    "posix",
    "security",
    "xtask",
    "drivers/input",
    "drivers"
, "app"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
