[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
storage = { path = "../drivers/storage" }
usb = { path = "../drivers/usb" }
network = { path = "../drivers/network" }
gpu = { path = "../drivers/gpu" }
hal = { version = "0.1.0", path = "../hal" }
x86_64 = "0.15.4"
bootloader_api = "0.11.15"
linked_list_allocator = "0.10.5"
spin = "0.9.8"
